Cloudformation/vpc.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description:
  Code for designing VPC

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
        CidrBlock: 10.0.0.0/24
        EnableDnsHostnames: true
        EnableDnsSupport: true
        InstanceTenancy: default
        Tags:
        - Key: Name
          Value: my-VPC
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        MapPublicIpOnLaunch: true
        AvailabilityZone: ap-southeast-1a
        CidrBlock: 10.0.0.0/26
        Tags:
        - Key: Name
          Value: public-subnet-a
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        MapPublicIpOnLaunch: false
        AvailabilityZone: ap-southeast-1a
        CidrBlock: 10.0.0.64/26
        Tags:
        - Key: Name
          Value: private-subnet-a
  # PublicSubnet2:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #       VpcId: !Ref VPC
  #       MapPublicIpOnLaunch: true
  #       AvailabilityZone: ap-southeast-1b
  #       CidrBlock: 10.0.0.128/26
  #       Tags:
  #       - Key: Name
  #         Value: public-subnet-b
  # PrivateSubnet2:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #       VpcId: !Ref VPC
  #       MapPublicIpOnLaunch: false
  #       AvailabilityZone: ap-southeast-1b
  #       CidrBlock: 10.0.0.192/26
  #       Tags:
  #       - Key: Name
  #         Value: private-subnet-b
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: my-igw
  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
  PublicRT1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: public-a-RT
      VpcId: !Ref VPC
  PrivateRT1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: private-a-RT
      VpcId: !Ref VPC
  # PublicRT2:
  #   Type: AWS::EC2::RouteTable
  #   Properties:
  #     Tags:
  #     - Key: Name
  #       Value: public-b-RT
  #     VpcId: !Ref VPC
  # PrivateRT2:
  #   Type: AWS::EC2::RouteTable
  #   Properties:
  #     Tags:
  #     - Key: Name
  #       Value: private-b-RT
  #     VpcId: !Ref VPC
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT1
      SubnetId: !Ref PublicSubnet1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRT1
      SubnetId: !Ref PrivateSubnet1
  Public1RouteToIGW:
    Type: AWS::EC2::Route
    DependsOn: PublicRT1
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRT1
  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: elastic-1
  NATGW1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet1
      Tags:
      - Key: Name
        Value: nat-gw-a
  Private1RouteToNAT:
    Type: AWS::EC2::Route
    DependsOn: PrivateRT1
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGW1
      RouteTableId: !Ref PrivateRT1
  InstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 Instance
      GroupName: ec2-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: Compute-SG
      VpcId: !Ref VPC
  InstanceHTTPRuleSG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Add connection to HTTP
      FromPort: 80
      GroupId: !Ref InstanceSG
      IpProtocol: tcp
      ToPort: 80
  InstanceHTTPSRuleSG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Add connection to HTTPS
      FromPort: 443
      GroupId: !Ref InstanceSG
      IpProtocol: tcp
      ToPort: 443
  InstanceICMPRuleSG:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      Description: Make an instance to be pingable
      FromPort: -1
      GroupId: !Ref InstanceSG
      IpProtocol: icmp
      ToPort: -1
  PublicInstance1:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-southeast-1a
      ImageId: ami-01aa83ab14b00e516
      InstanceType: t2.micro
      KeyName: ec2-public-a
      SecurityGroupIds: 
      - !Ref InstanceSG
      SourceDestCheck: false
      SubnetId: !Ref PublicSubnet1
      Tags:
      - Key: Name
        Value: ec2-public-a
      Tenancy: default
  PrivateInstance1:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-southeast-1a
      ImageId: ami-01aa83ab14b00e516
      InstanceType: t2.micro
      KeyName: ec2-private-a
      SecurityGroupIds: 
      - !Ref InstanceSG
      SourceDestCheck: false
      SubnetId: !Ref PrivateSubnet1
      Tags:
      - Key: Name
        Value: ec2-private-a
      Tenancy: default
                
Outputs:
  VPC:
    Description: VPC infrastructure
    Value: !Ref VPC
  PublicSubnet1:
    Description: Public Subnet 1
    Value: !Ref PublicSubnet1
  PrivateSubnet1:
    Description: Private Subnet 1
    Value: !Ref PrivateSubnet1
  # PublicSubnet2:
  #   Description: Public Subnet 2
  #   Value: !Ref PublicSubnet2
  # PrivateSubnet2:
  #   Description: Private Subnet 2
  #   Value: !Ref PrivateSubnet2
  IGW:
    Description: Internet Gateway
    Value: !Ref IGW
  AttachIGW:
    Description: Internet Gateway is being attached to VPC
    Value: !Ref AttachIGW
  PublicRT1:
    Description: Public Route Table 1
    Value: !Ref PublicRT1
  PrivateRT1:
    Description: Private Route Table 1
    Value: !Ref PrivateRT1
  # PublicRT2:
  #   Description: Public Route Table 2
  #   Value: !Ref PublicRT2
  # PrivateRT2:
  #   Description: Private Route Table 2
  #   Value: !Ref PrivateRT2
  PublicSubnet1RouteTableAssociation:
    Description: Associate Public Subnet 1 with Public Route Table 1
    Value: !Ref PublicSubnet1RouteTableAssociation
  PrivateSubnet1RouteTableAssociation:
    Description: Associate Private Subnet 1 with Private Route Table 1
    Value: !Ref PrivateSubnet1RouteTableAssociation
  Public1RouteToIGW:
    Description: Assign Internet Gateway to Public Route Table 1
    Value: !Ref Public1RouteToIGW
  EIP1:
    Description: Allocating Elastic IP Address 1
    Value: !Ref EIP1
  NATGW1:
    Description: NAT Gateway with EIP 1
    Value: !Ref NATGW1
  Private1RouteToNAT:
    Description: Assign NAT Gateway to Private Route Table 1
    Value: !Ref Private1RouteToNAT
  InstanceSG:
    Description: Security Group for Instances
    Value: !Ref InstanceSG
  PublicInstance1:
    Description: Public EC2 Instance 1
    Value: !Ref PublicInstance1
  PrivateInstance1:
    Description: Public EC2 Instance 1
    Value: !Ref PrivateInstance1
